init communication for background with devtool and content script- extension setup

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
-		"js": ["inject/content-script.js","scripts/communication.js"],
+		"js": ["scripts/communication.js","inject/content-script.js"],
 		"run_at": "document_end"
 	  }],
 	
